# Interop_Example

./: Interop_Example.sln  README.md
Interop_Example/: Program.cs
Interop_Example/RustCode/: Cargo.toml
Interop_Example/RustCode/src/: main.rs
