[package]
name = "interop_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Example located here https://github.com/slog-rs/example-lib/blob/master/Cargo.toml

[lib]
path = "src/main.rs"  
 crate-type = ["dylib"]

[dependencies]
